# capacitor-lancedb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CapacitorLanceDB.podspec  CapacitorLancedb.podspec  Package.swift  README.md  SECURITY.md  package-lock.json  package.json
.changeset/: generic-vector-api.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
android/: build.gradle
android/src/main/java/com/t6x/plugins/lancedb/: LanceDBPlugin.kt
android/src/main/java/uniffi/lancedb_ffi/: lancedb_ffi.kt
example/: capacitor.config.json  package.json  setup-mac.sh  test-e2e-android.mjs  test-e2e-ios.mjs
example/www/: index.html
ios/Frameworks/LanceDBFFI.xcframework/: Info.plist
ios/Frameworks/LanceDBFFI.xcframework/ios-arm64-simulator/Headers/: lancedb_ffiFFI.h
ios/Frameworks/LanceDBFFI.xcframework/ios-arm64/Headers/: lancedb_ffiFFI.modulemap
ios/Frameworks/LanceDBFFI.xcframework/ios-arm64/Headers/lancedb_ffi/: lancedb_ffi.swift  lancedb_ffiFFI.h  module.modulemap
ios/Sources/LanceDBPlugin/: LanceDBPlugin.swift
rust/lance-linalg-patched/: Cargo.toml  build.rs
rust/lancedb-ffi/: Cargo.toml
rust/lancedb-ffi/.cargo/: config.toml
rust/lancedb-ffi/src/: lib.rs
scripts/: build-android.sh  build-ios.sh
src/: definitions.ts  index.ts  plugin.ts
src/memory/: entity-extractor.ts  indexer.ts  kuzu-adapter.ts  kuzu-migration.ts  kuzu-schema.ts  manager.ts  ner.ts  security.ts  types.ts
src/tools/: memory.tools.ts
